@@ -5,7 +5,8 @@ changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 Version 1.3.13+svn:
   * Language and translations
     * Updated translations:
-
+  * User interface
+    * The apple key works a shortcut modifier again.
 
 Version 1.3.13:
   * Campaigns
